Fleshing out the logic in the saving